# kemsu-learn

./: .gitignore  README.md
databases/join/: create_s_emp_copy.sql  task1.sql  task2.sql  task3.sql  task4.sql  task5.sql
databases/join/homework/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
databases/subqueries/classroom/: 1.sql  2.sql  3.sql  4.sql  5.sql  task1.sql  task2.sql  task3.sql  task4.sql  task5.sql
programming/abstract/: CMakeLists.txt
programming/abstract/src/: main.cpp
programming/abstract/src/figure/: circle.cpp  circle.h  cylinder.cpp  cylinder.h  figure.cpp  figure.h  rectangle.cpp  rectangle.h
programming/function/: task1.cpp  task2.cpp
